# bpsr-chat-viewer

./: .gitignore  README.md  README_ja.md  build_exe.bat  run_gui.bat
backend/: main.py  pyproject.toml
backend/proto/: table_basic.proto
backend/proto/bokura/: AITable.proto  AchievementDateTable.proto  AchievementEntryTable.proto  AchievementSeasonClassTable.proto  AchievementTable.proto  ActionSampleTable.proto  ActionShowDataTable.proto  ActionTable.proto  ActivationTable.proto  AffixPoolTable.proto  AffixTable.proto  AnimShortNameTable.proto  AttrDescription.proto  AudioShowDataTable.proto  AwardAttrFixRatioTable.proto  AwardTable.proto  BDTAGLinkTable.proto  BDTAGRootTable.proto  BDTAGSpecialLinkTable.proto  BackgroundTable.proto  BasicAttrEffectTable.proto  BasicAttrGrowTable.proto  BasicAttrTable.proto  BattlePassCardTable.proto  BattlePassGlobalTable.proto  BdTagTable.proto  BeHitEffectTable.proto  BodyPartsTable.proto  BuffDataTable.proto  BuffTable.proto  BugReportConfigTable.proto  BugReportFilterTable.proto  BulletRunTable.proto  BulletShapeTable.proto  BulletTable.proto  CGTable.proto  CameraShowDataTable.proto  CampRelationshipTable.proto  ChallengeHeroDungeonTable.proto  ChangeQueueTable.proto  (+240 more)
backend/proto/table_config/: table_config_option.proto
backend/proto/zproto/: enum_body_part_state.proto  enum_body_part_type.proto  enum_build_furniture_op_type.proto  enum_camera_pattern_type.proto  enum_camera_scheme_type.proto  enum_chit_chat_channel_type.proto  enum_e_access_type.proto  (+1716 more)
backend/star_resonance_relay/: processor.py  sniffer.py  utils.py
(+4027 files in other folders)
