[project]
name = "backend"
version = "0.1.0"
description = "BPSR Chat Viewer Backend"
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "fastapi>=0.110.0",
    "protobuf>=4.25.0",
    "scapy>=2.5.0",
    "uvicorn[standard]>=0.29.0",
    "zstandard>=0.22.0",
    "websockets>=12.0",
    "psutil>=5.9.0",
    "pywebview>=5.0.0",
    "pyinstaller>=6.19.0",
]

[tool.setuptools.packages.find]
include = ["star_resonance_relay*", "proto*"]
